--- a/src/css/index.css
+++ b/src/css/index.css
@@ -32,21 +32,21 @@
 }
 
 html {
-  height: 100%;
+  min-height: 100%;
   background-color: var(--colorBg);
   color: var(--colorFg);
   font: 400 1em/1.5 var(--fontFamily);
 }
 
-body {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-
-.wrap {
-  display: table-cell;
-  vertical-align: middle;
+.center {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
